<resources>
    <string name="app_name">TradieDiary</string>
    <string name="is_completed_circle">Is Completed circle</string>
    <string name="finish_km">Finish KM</string>
    <string name="location">Location</string>
    <string name="title">Title</string>
    <string name="job_description">Job Description</string>
    <string name="start_km">Start KM</string>
    <string name="start_job">Start Job</string>
    <string name="completed">Completed</string>
    <string name="description">Description</string>
    <string name="plus">+</string>
    <string name="total_km">Total Km</string>
    <string name="completed_on">Completed:</string>
    <string name="job_time">Job Time:</string>
    <string name="save_button">Save Button</string>
</resources>